--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:  # Allow manual trigger from GitHub Actions UI
 
 jobs:
-  Pull_and_Run:
+  Create_Dataset_and_Run_DVC_Pipeline:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for the workflow
 
     steps:
@@ -51,4 +51,3 @@ jobs:
         run: |
           echo "Starting the DVC pipeline ..."
           dvc repro -f
-
