Put dvc push in ci_cd.yaml

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:  # Allow manual trigger from GitHub Actions UI
 
 jobs:
-  Create_Dataset_and_Run_DVC_Pipeline:
+  Create_Run_Deploy:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for the workflow
 
     steps:
@@ -51,3 +51,5 @@ jobs:
         run: |
           echo "Starting the DVC pipeline ..."
           dvc repro -f
+
+          dvc push
