--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -49,7 +49,5 @@ jobs:
       # Force DVC repro to re-run all of the existing steps
       - name: Run the full DVC pipeline
         run: |
-          echo "Starting the DVC pipeline ..."
+          echo 'Starting the DVC pipeline ...'
           dvc repro -f
-
-          dvc push
