--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -55,7 +55,7 @@
 
 
 
-name: Build and Run Docker Containers
+name: CI/CD
 
 on:
   push:
@@ -67,7 +67,7 @@ jobs:
     runs-on: ubuntu-latest  # Use an Ubuntu runner
 
     steps:
-      # Step 1: Checkout the code
+      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -77,7 +77,7 @@ jobs:
           sudo apt-get remove -y docker docker-engine docker.io containerd runc
           sudo apt-get autoremove -y
 
-      # Step 3: Install Docker and containerd.io
+      # Install Docker and containerd.io
       - name: Install Docker and containerd.io
         run: |
           sudo apt-get update
@@ -87,22 +87,23 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
-      # Step 4: Install Docker Compose
+      # Install Docker Compose
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
-      # Step 5: Build Docker images using docker-compose
+      # Build Docker images using docker-compose
       - name: Build Docker images
         run: |
-          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yaml build
 
-      # Step 6: Start Docker containers using docker-compose
+      # Start Docker containers using docker-compose
       - name: Start Docker containers
         run: |
-          docker-compose -f docker-compose.yml up -d
-
+          docker-compose -f docker-compose.yaml up -d
+      
+      # run dvc repro -f 
       - name: Run tests inside Docker container
         run: |
           docker-compose exec dvc_pipeline dvc repro -f 
